# timers

./: Cargo.toml  README.md
src/: arima.rs  arma.rs  autocorrelation.rs  autoregressive.rs  lib.rs  main.rs  sarima.rs  seasonality.rs  ses.rs  sma.rs  stationarity.rs  trend.rs  whitenoise.rs  wma.rs
